# aurora-ui

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md
.cargo/: config.toml
aurora/: Cargo.toml
aurora/src/: lib.rs  prelude.rs
crates/aurora_a11y/: Cargo.toml
crates/aurora_animate/: Cargo.toml
crates/aurora_core/: Cargo.toml
crates/aurora_core/examples/: lerp.rs
crates/aurora_core/src/: color.rs  lib.rs
crates/aurora_core/src/geometry/: corners.rs  edges.rs  mod.rs  point.rs  rect.rs  size.rs
crates/aurora_core/src/kmi/: cursor_icon.rs  keyboard.rs  mod.rs  mouse.rs
crates/aurora_gpu/: Cargo.toml
crates/aurora_gpu/src/: gpu_context.rs  lib.rs
crates/aurora_gpu/src/backend/: mod.rs  softbuffer.rs
crates/aurora_layout/: Cargo.toml
crates/aurora_platform/: Cargo.toml
crates/aurora_platform/examples/: window_creation.rs
crates/aurora_platform/src/: app.rs  lib.rs
crates/aurora_platform/src/errors/: app.rs  mod.rs
crates/aurora_render/: Cargo.toml
crates/aurora_render/src/: canvas.rs  lib.rs
crates/aurora_text/: Cargo.toml
crates/aurora_text/src/: font_manager.rs  font_options.rs  lib.rs  text_layout.rs
crates/aurora_text/src/errors/: fonts.rs
crates/aurora_theme/: Cargo.toml
crates/aurora_widgets/: Cargo.toml
crates/aurora_widgets/src/: box_widget.rs  composite.rs  lib.rs  text_widget.rs  widgets.rs
crates/aurora_widgets/src/interactables/: button.rs  mod.rs  touch_area.rs
crates/aurora_widgets/src/layout/: column.rs  mod.rs  row.rs
examples/: minimal.rs
examples/button_example/: Cargo.toml
examples/button_example/src/: main.rs
examples/counter_example/: Cargo.toml
examples/counter_example/src/: main.rs
examples/custom_titlebar_example/: Cargo.toml
examples/custom_titlebar_example/src/: main.rs
examples/layout_example/: Cargo.toml
examples/layout_example/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/text_example/: Cargo.toml
examples/text_example/src/: main.rs
