[package]
name = "aurora_ui"
version = "0.1.0"
edition = "2024"
description = "A GPU-accelerated, feature-gated UI framework for building fast, lightweight desktop applications in Rust. Custom Win11/macOS titlebars. ~1.2 MB minimal binary. Sub-100ms startup."
authors = ["Drew Chase"]

[dependencies]
aurora_core = { path = "../crates/aurora_core" }
aurora_platform = { path = "../crates/aurora_platform" }
aurora_gpu = { path = "../crates/aurora_gpu" }
aurora_render = { path = "../crates/aurora_render" }
aurora_widgets = { path = "../crates/aurora_widgets" }
aurora_text = { path = "../crates/aurora_text", optional = true }


[features]
default = ["software"]
software = ["aurora_gpu/software"]
text = ["dep:aurora_text", "aurora_platform/text"]